WSF-6459 Make GA Content Experiment code available for both prod and UAT

--- a/app/views/layouts/base.html.erb
+++ b/app/views/layouts/base.html.erb
@@ -109,32 +109,10 @@
   <%= yield :custom_javascript %>
   <%# //Custom JavaScript %>
 
-  <%#
-    [WSF-6459]
-    Added conditional statement to only insert the Google Analytics (GA) codes in UAT environment for testing purpose.
-    The purpose of the test is to verify if GA is working in UAT prior to implementing a solution for the A/B testing.
-
-    Note: The GA Content Experiment code will only work within a script tag after some experimentation.
-
-    Post UAT TODO:
-      * Remove the conditional statement
-  %>
-  <% if Rails.env.uat? %>
-    <%# Google Analytics Content Experiment code %>
-    <script>function utmx_section(){}function utmx(){}(function(){var
-    k='84750189-7',d=document,l=d.location,c=d.cookie;
-    if(l.search.indexOf('utm_expid='+k)>0)return;
-    function f(n){if(c){var i=c.indexOf(n+'=');if(i>-1){var j=c.
-    indexOf(';',i);return escape(c.substring(i+n.length+1,j<0?c.
-    length:j))}}}var x=f('__utmx'),xx=f('__utmxx'),h=l.hash;d.write(
-    '<sc'+'ript src="'+'http'+(l.protocol=='https:'?'s://ssl':
-    '://www')+'.google-analytics.com/ga_exp.js?'+'utmxkey='+k+
-    '&utmx='+(x?x:'')+'&utmxx='+(xx?xx:'')+'&utmxtime='+new Date().
-    valueOf()+(h?'&utmxhash='+escape(h.substr(1)):'')+
-    '" type="text/javascript" charset="utf-8"><\/sc'+'ript>')})();
-    </script><script>utmx('url','A/B');</script>
-    <%# //End of Google Analytics Content Experiment code %>
-  <% end %>
+  <%# Google Analytics Content Experiment code %>
+  <%# Note: This can only be tested in production or UAT. %>
+  <%= raw google_analytics_content_experiment if Rails.env.production? || Rails.env.uat? %>
+  <%# //End of Google Analytics Content Experiment code %>
 
   <%# 3rd party JavaScript (Tealium) %>
   <%= raw third_party_universal_tagging %>
