changed to using test-xxx class selectors to match test targets

--- a/app/views/centres/index.html.erb
+++ b/app/views/centres/index.html.erb
@@ -104,7 +104,7 @@
         <ul id="tab-<%= state.downcase %>" class="tab__content<%= ' is-active' if state == 'NSW' %>">
           <% @centres_by_state[state].each do |centre| %>
             <li class="js-viewport-check js-sort-centres-geolocation-<%= centre.code %>" >
-              <a class="national__centre-tile national__centre-tile--<%= centre.code %> ga-centre-links" href="<%= centre_path( centre ) %>">
+              <a class="national__centre-tile national__centre-tile--<%= centre.code %> ga-centre-links test-centre-tile-link" href="<%= centre_path( centre ) %>">
                 <div class="container">
                   <div class="h1"><%= centre.short_name %></div>
                   <span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
