--- a/app/views/shared/tiles/_product.html.erb
+++ b/app/views/shared/tiles/_product.html.erb
@@ -20,7 +20,7 @@
   <%# //Product name %>
 
   <%# Product brand %>
-  <p class="tile__meta__desc txt-truncate">from <strong><%= result.retail_chain_name %></strong></p>
+  <p class="tile__meta__desc txt-truncate test-tile-meta-desc">from <strong><%= result.retail_chain_name %></strong></p>
   <%# //Product brand %>
 
   <%# Product price %>
