--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -39,7 +39,7 @@
               <div class="stores-maps__filters__item drop-down-menu drop-down-container">
 
                 <%# Drop down trigger %>
-                <button ng-click="viewSubCategory(null)" class="drop-down-menu__trigger btn btn--main btn--main-dark btn--pointer btn--pointer-padding-med js-disabled-hide js-fastclick" toggle-visibility="category-store-filter">
+                <button ng-click="viewSubCategory(null)" class="drop-down-menu__trigger btn btn--main btn--main-dark btn--pointer btn--pointer-padding-med js-disabled-hide js-fastclick test-stores-category-filter-button" toggle-visibility="category-store-filter">
                   Category
                   <span class="hide-visually"> filter</span>
                   <span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span>
@@ -47,10 +47,10 @@
                 <%# //Drop down trigger %>
 
                 <%# Drop down target %>
-                <div class="drop-down-menu__target drop-down-menu__target--alt-width-palm drop-down pointer-up box box--drop-down" id="category-store-filter">
+                <div class="drop-down-menu__target drop-down-menu__target--alt-width-palm drop-down pointer-up box box--drop-down test-stores-category-filter-drop-down" id="category-store-filter">
 
                   <%# T1 categories %>
-                  <ul ng-class="{'is-active': (viewingSubCategory == undefined)}" id="stores-main-categories" class="drop-down-menu__list toggle-visibility <%= 'is-active' unless @active_category %>">
+                  <ul ng-class="{'is-active': (viewingSubCategory == undefined)}" id="stores-main-categories" class="drop-down-menu__list toggle-visibility test-stores-main-categories <%= 'is-active' unless @active_category %>">
 
                     <% @categories.each do |category| %>
                       <li class="drop-down-menu__divider">
@@ -72,7 +72,7 @@
                               <span class="icon icon--arrow-right-big icon--lrg btn--pointer__icon js-disabled-hide" aria-hidden="true"></span>
                             </div>
                           <% else %>
-                            <a ng-click="viewSubCategory('<%= category.code %>')" href="#<%= category.code %>_categories" id="<%= category.code %>" aria-haspopup="true" aria-controls="<%= category.code %>_categories" class="drop-down-menu__hdr-btn btn btn--full btn--full-left btn--pointer">
+                            <a ng-click="viewSubCategory('<%= category.code %>')" href="#<%= category.code %>_categories" id="<%= category.code %>" aria-haspopup="true" aria-controls="<%= category.code %>_categories" class="drop-down-menu__hdr-btn btn btn--full btn--full-left btn--pointer test-stores-main-category-link">
                               <%= category.name %>
                               <span class="hide-visually"> (view sub categories)</span>
                               <span class="icon icon--arrow-right-big icon--lrg btn--pointer__icon js-disabled-hide" aria-hidden="true"></span>
@@ -89,7 +89,7 @@
                     <div ng-class="{'is-active': (viewingSubCategory == '<%= category.code %>')}"
                          ng-attr-aria-hidden="{{viewingSubCategory != '<%= category.code %>'}}"
                          aria-labelledby="<%= category.code %>"
-                      id="<%= category.code %>_categories" class="toggle-visibility">
+                      id="<%= category.code %>_categories" class="toggle-visibility test-stores-sub-categories">
                       <div class="drop-down-menu__hdr drop-down-menu__divider islet">
                         <h2><%= category.name %></h2>
                         <a ng-click="viewSubCategory(null)" href="#stores-main-categories" class="btn js-disabled-hide">
@@ -106,7 +106,7 @@
                                 <span class="hide-visually"> (gift cards not available for this category)</span>
                               </div>
                             <% else %>
-                              <a href="<%= centre_stores_category_path(@centre, sub_category.code) %>" ng-href="<%= centre_stores_category_path(@centre, sub_category.code) %>{{queryParams}}" class="btn btn--full btn--full-left js-pjax-link-stores" ng-click="saveCategory('<%= sub_category.code %>')" target="_self"><%= sub_category.name %></a>
+                              <a href="<%= centre_stores_category_path(@centre, sub_category.code) %>" ng-href="<%= centre_stores_category_path(@centre, sub_category.code) %>{{queryParams}}" class="btn btn--full btn--full-left js-pjax-link-stores test-stores-sub-category-link" ng-click="saveCategory('<%= sub_category.code %>')" target="_self"><%= sub_category.name %></a>
                             <% end %>
                           </li>
                         <% end %>
