Increasing quality for curation tile and hero images

--- a/app/views/shared/tiles/_curation.html.erb
+++ b/app/views/shared/tiles/_curation.html.erb
@@ -2,11 +2,11 @@
 <div class="tile__image">
   <%= fetch_image_tag result.image,
     width: 269,
-    alt: '',
+    alt: "",
     crop: :limit,
     format: :auto,
     itemprop: :image,
-    quality: 25
+    quality: 80
   %>
 </div>
 <%# //Image %>
