Making all null alt attrs use single quotes

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -27,7 +27,7 @@
     <section class="detail-view__media detail-view__mrg-base" aria-labelledby="image">
       <h2 class="hide-visually" id="image">Event Image</h2>
       <%= fetch_image_tag @event.image,
-        alt: "",
+        alt: '',
         width: 638,
         crop: :limit,
         format: :auto,
