--- a/app/views/shared/tiles/_canned_search.html.erb
+++ b/app/views/shared/tiles/_canned_search.html.erb
@@ -2,7 +2,7 @@
 <div class="tile__image">
   <%= cl_image_tag(result.image_ref,
     width: 269,
-    alt: "",
+    alt: '',
     crop: 'limit',
     format: 'jpg',
     fetch_format: 'auto')
