--- a/app/views/shared/tiles/_curation.html.erb
+++ b/app/views/shared/tiles/_curation.html.erb
@@ -2,7 +2,7 @@
 <div class="tile__image">
   <%= fetch_image_tag result.image,
     width: 269,
-    alt: "",
+    alt: '',
     crop: :limit,
     format: :auto,
     itemprop: :image,
