--- a/app/views/stores/_header_with_banner.html.erb
+++ b/app/views/stores/_header_with_banner.html.erb
@@ -21,7 +21,7 @@
         <li class="storefront__flexslider-blurb">
           <%# We repeat the banner image in this slide so that the slide gets the same dimensions as the slide above %>
           <%= fetch_image_tag @store.storefront,
-            alt: "",
+            alt: '',
             width: 2048,
             crop: :limit,
             quality: 25,
