--- a/app/views/shared/tiles/_event.html.erb
+++ b/app/views/shared/tiles/_event.html.erb
@@ -4,7 +4,7 @@
 <div class="tile__image">
   <%= fetch_image_tag result.image,
     width: 269,
-    alt: "",
+    alt: '',
     crop: :limit,
     format: :auto,
     itemprop: :image
