Small accessibility updates to Stores and global search

--- a/app/assets/stylesheets/partials/modules/_stores-maps.scss
+++ b/app/assets/stylesheets/partials/modules/_stores-maps.scss
@@ -229,6 +229,7 @@
             /* Forward slash to seperate the link and the store name */
             &:after {
               content: " /";
+              speak: none;
               color: $color-txt-dark;
             }
           }
