add basic stores acceptance tests

--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -12,7 +12,7 @@
     </span>
     <%# //PJAX preloader %>
 
-    <div class="stores-maps__inner stores-maps__inner--detail" id="stores-maps-toggle-listing-detail">
+    <div class="stores-maps__inner stores-maps__inner--detail test-stores-show" id="stores-maps-toggle-listing-detail">
 
       <%# Back to listing link %>
       <div class="stores-maps__filters-toggle">
