--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -201,7 +201,7 @@
 
       <%# Stores list %>
       <div class="stores-maps__list-detail js-defer-image-load-container js-stores-list-position-store-list js-stores-dynamic-height js-stores-index" id="stores-maps-toggle-listing-detail">
-        <dl class="stores-list js-fastclick js-stores-keyword-filter-list">
+        <dl class="stores-list js-fastclick js-stores-keyword-filter-list test-stores-list">
           <% @stores.in_alpha_groups.each do |letter, stores| %>
             <dt class="js-stores-keyword-filter-letter js-stores-keyword-filter-letter-<%= letter %>">
               <div class="stores-list__inner container">
