--- a/app/assets/stylesheets/partials/layout/_national.scss
+++ b/app/assets/stylesheets/partials/layout/_national.scss
@@ -207,7 +207,7 @@
 
         @include respond-min(1100) {
           @include to-rem(width height, 514);
-          @include to-rem(padding, 126 $spacing-dbl);
+          @include to-rem(padding-top padding-bottom, 126);
           @include font-size(64, 1.1);
         }
 
