create animtions util

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,6 +31,7 @@
 @import "partials/utils/normalize";
 @import "partials/utils/reset";
 @import "partials/utils/debug";
+@import "partials/utils/animations";
 
   /* Utils -> Placeholders */
   @import "partials/utils/placeholders/bottom-spacing";
