refactor after browser testing. new version of modernizr

--- a/app/assets/stylesheets/partials/modules/_preloader.scss
+++ b/app/assets/stylesheets/partials/modules/_preloader.scss
@@ -48,20 +48,27 @@
   .preloader__spinner {
     @include to-rem(width height, 24);
     @include to-rem(margin, 8);
-    border-radius: 100%;
-    border: $spacing-micro + px solid $color-grey-dark-3;
 
-    @include prefix(animation, rotate 1s infinite linear);
+    .cssanimations & {
+      @include prefix(animation, rotate 1s infinite linear);
+      border-radius: 100%;
+      border: $spacing-micro + px solid $color-grey-dark-3;
 
-    /* the 'gap' in the preloader circle */
-    &:after {
-      content:"";
-      position: absolute;
-      @include to-rem(top, -$spacing-micro);
-      left: 50%;
-      @include translateX(-50%);
-      @include to-rem(height, $spacing-third);
-      @include to-rem(width , $spacing-quarter);
-      background: $color-grey-light-3;
+      /* the 'gap' in the preloader circle */
+      &:after {
+        content:"";
+        position: absolute;
+        @include to-rem(top, -3);
+        left: 50%;
+        @include translateX(-50%);
+        @include to-rem(height, $spacing-third);
+        @include to-rem(width , $spacing-quarter);
+        background: $color-grey-light-3;
+      }
+    }
+
+    .no-cssanimations & {
+      background: $color-grey-light-3 cloudinary-url("css/preloader.gif") no-repeat 50% 50%;
+      @include img-2x("css/preloader@2x.gif", 24px, 24px);
     }
   }
